manifests/03-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpc-test
  name: grpc-test
  namespace: grpc
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
      appProtocol: HTTP2
  selector:
    app: grpc-test
