manifests/06-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grpc-test
  namespace: grpc
spec:
  parentRefs:
    - kind: Gateway
      name: grpc-test
      namespace: grpc
  hostnames:
    - grpc.example.internal
  rules:
    - backendRefs:
      - name: grpc-test
        port: 8443
